Day 3 add tests